--- a/views/tour_list.html
+++ b/views/tour_list.html
@@ -29,7 +29,7 @@
 		<select id="shipSelect">
 			<option>Select Ship</option>
 		</select>
-		<table>
+		<table id="tourTable">
 			<thead>
 				<tr>
 					<td>Tour Name</td>
