--- a/views/cruise_input.html
+++ b/views/cruise_input.html
@@ -8,11 +8,17 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="../public/stylesheets/style.css" />
 </head>
 <body>
-	<div id="header">
-		<h2>Alaska Touring Companion</h2>
-		<button class="btn">Logout</button>
+	<div id="header-cont">
+		<div id="shadowbox"></div>
+		<img src="https://catchcrabs.com/wp-content/uploads/2016/02/08-Tray-of-Crab-1500x630.jpg" />
+		<div id="header">
+			<img src="https://catchcrabs.com/wp-content/uploads/2016/01/crabs-logo.png" />
+			<h2>Alaska Touring Companion</h2>
+			<button class="btn">Logout</button>
+		</div>
 	</div>
 	<div id="navbar" class="col-md-3">
 		<nav>
