--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,76 @@
+html{
+	height: 100%;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
-a {
-  color: #00B7FF;
+#header-cont{
+	position: relative;
+}
+
+#header-cont img{
+width: 100%;
+}
+
+#header-cont #shadowbox{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	background-color: #000000;
+	opacity: 0.5;
+}
+
+#header img{
+	position: absolute;
+	top: 0;
+	width: 300px;
+	margin: 15px;
+}
+
+#header button{
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 2;
+	margin: 15px;
+}
+
+#header h2{
+	position: absolute;
+	top: calc(50% - 25px);
+	text-align: center;
+	color: white;
+	width: 100%;
+	font-size: 50px;
+	text-transform: uppercase;
+}
+
+#navbar{
+	background-color: #0286cf;
+	padding: 0;
+}
+
+nav{
+	background-color: #000000;
+	opacity: 0.5;
+	height: 100%;
+}
+
+nav li{
+	list-style: none;
+	padding: 10px 0;
+}
+
+nav li a{
+	color: white;
+}
+
+form .row{
+	padding: 15px;
 }
