--- a/views/tour_input.html
+++ b/views/tour_input.html
@@ -8,11 +8,17 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="../public/stylesheets/style.css" />
 </head>
 <body>
-	<div id="header">
-		<h2>Alaska Touring Companion</h2>
-		<button class="btn">Logout</button>
+	<div id="header-cont">
+		<div id="shadowbox"></div>
+		<img src="https://catchcrabs.com/wp-content/uploads/2016/02/08-Tray-of-Crab-1500x630.jpg" />
+		<div id="header">
+			<img src="https://catchcrabs.com/wp-content/uploads/2016/01/crabs-logo.png" />
+			<h2>Alaska Touring Companion</h2>
+			<button class="btn">Logout</button>
+		</div>
 	</div>
 	<div id="navbar" class="col-md-3">
 		<nav>
@@ -26,300 +32,19 @@
 	<div class="col-md-9 content">
 		<h3>Add a Tour</h3>
 		<form>
-			<label class="col-md-12">Name of Tour<input type="text" /></label>
-			<label class="col-md-12">Description<input type="text" /></label>
-			<label class="col-md-12">Start Time<input type="text" /></label>
-			<label class="col-md-12">End Time<input type="number" /></label>
+			<div class="row">
+				<label class="col-md-3" for="tour_name">Name of Tour</label><input type="text" name="tour_name" id="tour_name"/>
+			</div>
+			<div class="row">
+				<label class="col-md-3" for="tour_desc">Description</label><input type="text" name="tour_desc" id="tour_desc" />
+			</div>
+			<div class="row">
+				<label class="col-md-3" for="start_time">Start Time</label><input type="text" name="start_time" id="start_time"/>
+			</div>
+			<div class="row">
+				<label class="col-md-3" for="end_time">End Time</label><input type="number" name="end_time" id="end_time"/>
+			</div>
 			<input type="Submit" value="Submit" />
 		</form>
 	</div>
 </body>
-</html><!DOCTYPE html>
-<html>
-<head>
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-</head>
-<body>
-	<div id="header">
-		<h2>Alaska Touring Companion</h2>
-		<button class="btn">Logout</button>
-	</div>
-	<div id="navbar" class="col-md-3">
-		<nav>
-			<ul>
-				<li><a>Home</a></li>
-				<li><a href="cruise_list.html">Cruise List</a></li>
-				<li><a href="tour_list.html">Tour List</a></li>
-			</ul>
-		</nav>
-	</div>
-	<div class="col-md-9 content">
-		<h3>Add a Tour</h3>
-		<form>
-			<label class="col-md-12">Name of Tour<input type="text" /></label>
-			<label class="col-md-12">Description<input type="text" /></label>
-			<label class="col-md-12">Start Time<input type="text" /></label>
-			<label class="col-md-12">End Time<input type="number" /></label>
-			<input type="Submit" value="Submit" />
-		</form>
-	</div>
-</body>
-</html><!DOCTYPE html>
-<html>
-<head>
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-</head>
-<body>
-	<div id="header">
-		<h2>Alaska Touring Companion</h2>
-		<button class="btn">Logout</button>
-	</div>
-	<div id="navbar" class="col-md-3">
-		<nav>
-			<ul>
-				<li><a>Home</a></li>
-				<li><a href="cruise_list.html">Cruise List</a></li>
-				<li><a href="tour_list.html">Tour List</a></li>
-			</ul>
-		</nav>
-	</div>
-	<div class="col-md-9 content">
-		<h3>Add a Tour</h3>
-		<form>
-			<label class="col-md-12">Name of Tour<input type="text" /></label>
-			<label class="col-md-12">Description<input type="text" /></label>
-			<label class="col-md-12">Start Time<input type="text" /></label>
-			<label class="col-md-12">End Time<input type="number" /></label>
-			<input type="Submit" value="Submit" />
-		</form>
-	</div>
-</body>
-</html><!DOCTYPE html>
-<html>
-<head>
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-</head>
-<body>
-	<div id="header">
-		<h2>Alaska Touring Companion</h2>
-		<button class="btn">Logout</button>
-	</div>
-	<div id="navbar" class="col-md-3">
-		<nav>
-			<ul>
-				<li><a>Home</a></li>
-				<li><a href="cruise_list.html">Cruise List</a></li>
-				<li><a href="tour_list.html">Tour List</a></li>
-			</ul>
-		</nav>
-	</div>
-	<div class="col-md-9 content">
-		<h3>Add a Tour</h3>
-		<form>
-			<label class="col-md-12">Name of Tour<input type="text" /></label>
-			<label class="col-md-12">Description<input type="text" /></label>
-			<label class="col-md-12">Start Time<input type="text" /></label>
-			<label class="col-md-12">End Time<input type="number" /></label>
-			<input type="Submit" value="Submit" />
-		</form>
-	</div>
-</body>
-</html><!DOCTYPE html>
-<html>
-<head>
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-</head>
-<body>
-	<div id="header">
-		<h2>Alaska Touring Companion</h2>
-		<button class="btn">Logout</button>
-	</div>
-	<div id="navbar" class="col-md-3">
-		<nav>
-			<ul>
-				<li><a>Home</a></li>
-				<li><a href="cruise_list.html">Cruise List</a></li>
-				<li><a href="tour_list.html">Tour List</a></li>
-			</ul>
-		</nav>
-	</div>
-	<div class="col-md-9 content">
-		<h3>Add a Tour</h3>
-		<form>
-			<label class="col-md-12">Name of Tour<input type="text" /></label>
-			<label class="col-md-12">Description<input type="text" /></label>
-			<label class="col-md-12">Start Time<input type="text" /></label>
-			<label class="col-md-12">End Time<input type="number" /></label>
-			<input type="Submit" value="Submit" />
-		</form>
-	</div>
-</body>
-</html><!DOCTYPE html>
-<html>
-<head>
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-</head>
-<body>
-	<div id="header">
-		<h2>Alaska Touring Companion</h2>
-		<button class="btn">Logout</button>
-	</div>
-	<div id="navbar" class="col-md-3">
-		<nav>
-			<ul>
-				<li><a>Home</a></li>
-				<li><a href="cruise_list.html">Cruise List</a></li>
-				<li><a href="tour_list.html">Tour List</a></li>
-			</ul>
-		</nav>
-	</div>
-	<div class="col-md-9 content">
-		<h3>Add a Tour</h3>
-		<form>
-			<label class="col-md-12">Name of Tour<input type="text" /></label>
-			<label class="col-md-12">Description<input type="text" /></label>
-			<label class="col-md-12">Start Time<input type="text" /></label>
-			<label class="col-md-12">End Time<input type="number" /></label>
-			<input type="Submit" value="Submit" />
-		</form>
-	</div>
-</body>
-</html><!DOCTYPE html>
-<html>
-<head>
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-</head>
-<body>
-	<div id="header">
-		<h2>Alaska Touring Companion</h2>
-		<button class="btn">Logout</button>
-	</div>
-	<div id="navbar" class="col-md-3">
-		<nav>
-			<ul>
-				<li><a>Home</a></li>
-				<li><a href="cruise_list.html">Cruise List</a></li>
-				<li><a href="tour_list.html">Tour List</a></li>
-			</ul>
-		</nav>
-	</div>
-	<div class="col-md-9 content">
-		<h3>Add a Tour</h3>
-		<form>
-			<label class="col-md-12">Name of Tour<input type="text" /></label>
-			<label class="col-md-12">Description<input type="text" /></label>
-			<label class="col-md-12">Start Time<input type="text" /></label>
-			<label class="col-md-12">End Time<input type="number" /></label>
-			<input type="Submit" value="Submit" />
-		</form>
-	</div>
-</body>
-</html><!DOCTYPE html>
-<html>
-<head>
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-</head>
-<body>
-	<div id="header">
-		<h2>Alaska Touring Companion</h2>
-		<button class="btn">Logout</button>
-	</div>
-	<div id="navbar" class="col-md-3">
-		<nav>
-			<ul>
-				<li><a>Home</a></li>
-				<li><a href="cruise_list.html">Cruise List</a></li>
-				<li><a href="tour_list.html">Tour List</a></li>
-			</ul>
-		</nav>
-	</div>
-	<div class="col-md-9 content">
-		<h3>Add a Tour</h3>
-		<form>
-			<label class="col-md-12">Name of Tour<input type="text" /></label>
-			<label class="col-md-12">Description<input type="text" /></label>
-			<label class="col-md-12">Start Time<input type="text" /></label>
-			<label class="col-md-12">End Time<input type="number" /></label>
-			<input type="Submit" value="Submit" />
-		</form>
-	</div>
-</body>
-</html><!DOCTYPE html>
-<html>
-<head>
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-</head>
-<body>
-	<div id="header">
-		<h2>Alaska Touring Companion</h2>
-		<button class="btn">Logout</button>
-	</div>
-	<div id="navbar" class="col-md-3">
-		<nav>
-			<ul>
-				<li><a>Home</a></li>
-				<li><a href="cruise_list.html">Cruise List</a></li>
-				<li><a href="tour_list.html">Tour List</a></li>
-			</ul>
-		</nav>
-	</div>
-	<div class="col-md-9 content">
-		<h3>Add a Tour</h3>
-		<form>
-			<label class="col-md-12">Name of Tour<input type="text" /></label>
-			<label class="col-md-12">Description<input type="text" /></label>
-			<label class="col-md-12">Start Time<input type="text" /></label>
-			<label class="col-md-12">End Time<input type="number" /></label>
-			<input type="Submit" value="Submit" />
-		</form>
-	</div>
-</body>
-</html>
