--- a/views/tour_list.html
+++ b/views/tour_list.html
@@ -9,11 +9,17 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="../public/stylesheets/style.css" />
 </head>
 <body>
-	<div id="header">
-		<h2>Alaska Touring Companion</h2>
-		<button class="btn">Logout</button>
+	<div id="header-cont">
+		<div id="shadowbox"></div>
+		<img src="https://catchcrabs.com/wp-content/uploads/2016/02/08-Tray-of-Crab-1500x630.jpg" />
+		<div id="header">
+			<img src="https://catchcrabs.com/wp-content/uploads/2016/01/crabs-logo.png" />
+			<h2>Alaska Touring Companion</h2>
+			<button class="btn">Logout</button>
+		</div>
 	</div>
 	<div id="navbar" class="col-md-3">
 		<nav>
@@ -29,7 +35,7 @@
 		<select id="shipSelect">
 			<option>Select Ship</option>
 		</select>
-		<table id="tourTable">
+		<table id="tourTable" class="table table-striped">
 			<thead>
 				<tr>
 					<td>Tour Name</td>
