--- a/views/tour_list.html
+++ b/views/tour_list.html
@@ -9,7 +9,7 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="../public/stylesheets/style.css" />
+	<link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 <body>
 	<div id="header-cont">
