--- a/views/cruise_list.html
+++ b/views/cruise_list.html
@@ -25,8 +25,10 @@
 		<nav>
 			<ul>
 				<li><a>Home</a></li>
-				<li><a href="cruiselist">Cruise List</a></li>
-				<li><a href="tourlist">Tour List</a></li>
+				<li><a href="cruise_list.html">Cruise List</a></li>
+				<li><a href="tour_list.html">Tour List</a></li>
+				<li><a href="cruise_input.html">Cruise Input</a></li>
+				<li><a href="tour_input.html">Tour Input</a>
 			</ul>
 		</nav>
 	</div>
