--- a/views/cruise_list.html
+++ b/views/cruise_list.html
@@ -25,16 +25,16 @@
 		<nav>
 			<ul>
 				<li><a>Home</a></li>
-				<li><a href="cruise_list.html">Cruise List</a></li>
-				<li><a href="tour_list.html">Tour List</a></li>
-				<li><a href="cruise_input.html">Cruise Input</a></li>
-				<li><a href="tour_input.html">Tour Input</a>
+				<li><a href="cruiselist">Cruise List</a></li>
+				<li><a href="tourlist">Tour List</a></li>
+				<li><a href="cruiseinput">Cruise Input</a></li>
+				<li><a href="tourinput">Tour Input</a>
 			</ul>
 		</nav>
 	</div>
 	<div class="col-md-9 content">
 		<h3>Cruise List</h3>
-		<table class="table table-striped">
+		<table id="cruiseTable" class="table table-striped">
 			<thead>
 				<tr>
 					<td>Ship Name</td>
