--- a/views/tour_input.html
+++ b/views/tour_input.html
@@ -24,10 +24,10 @@
 		<nav>
 			<ul>
 				<li><a>Home</a></li>
-				<li><a href="cruise_list.html">Cruise List</a></li>
-				<li><a href="tour_list.html">Tour List</a></li>
-				<li><a href="cruise_input.html">Cruise Input</a></li>
-				<li><a href="tour_input.html">Tour Input</a>
+				<li><a href="cruiselist">Cruise List</a></li>
+				<li><a href="tourlist">Tour List</a></li>
+				<li><a href="cruiseinput">Cruise Input</a></li>
+				<li><a href="tourinput">Tour Input</a>
 			</ul>
 		</nav>
 	</div>
@@ -41,10 +41,10 @@
 				<label class="col-md-3" for="tour_desc">Description</label><input type="text" name="tour_desc" id="tour_desc" />
 			</div>
 			<div class="row">
-				<label class="col-md-3" for="start_time">Start Time</label><input type="text" name="start_time" id="start_time"/>
+				<label class="col-md-3" for="start_time">Start Time</label><input type="time" name="start_time" id="start_time"/>
 			</div>
 			<div class="row">
-				<label class="col-md-3" for="end_time">End Time</label><input type="number" name="end_time" id="end_time"/>
+				<label class="col-md-3" for="end_time">End Time</label><input type="time" name="end_time" id="end_time"/>
 			</div>
 			<input type="Submit" value="Submit" />
 		</form>
